--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<p><span class="badge badge-light">S?o Paulo</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/coupang/jobs/1918875'>Job Application for  [GO Data Science]Director, Data Science at Coupang</a></h5> 
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -166,7 +170,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -182,7 +186,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Emeryville, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oD88afwN&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nADJlMwy'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oD88afwN&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nADJlMwy'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -198,7 +202,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careers.unity.com/position/data-science-manager-monetization/1185960?gh_src=0bf3ea7d1'>Unity Careers - Data Science Manager, Monetization @ San Francisco</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/data-science-manager-monetization/1185960?gh_src=0bf3ea7d1'>Unity Careers - Data Science Manager, Monetization @ San Francisco</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -263,7 +267,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -271,7 +275,7 @@ and?...</p>
 <p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://oviva.recruitee.com/o/data-scientist'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oviva.recruitee.com/o/data-scientist'>
       Data Scientist - Oviva
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
@@ -311,7 +315,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://assembly.applytojob.com/apply/lnYlNy6mh0/Data-Scientist-Predictive-Modeling'>Data Scientist, Predictive Modeling - Assembly - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/apply/lnYlNy6mh0/Data-Scientist-Predictive-Modeling'>Data Scientist, Predictive Modeling - Assembly - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -320,7 +324,7 @@ and?...</p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fractalanalytics.applytojob.com/apply/qEcm37wBnQ/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='https://fractalanalytics.applytojob.com/apply/qEcm37wBnQ/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 13, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in San Francisco, 
 CA.</p>
@@ -350,7 +354,7 @@ data processing workflows, using statistics and machine learning algorithms?...<
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q7IaVfwE&k=Job&j=oNTnbfwY&__jvst=Employee+Referral&__jvsd=sFP3Shwb&__jvsc=Twitter&bid=nL2flMwE'>LiveVox Careers - Associate Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q7IaVfwE&k=Job&j=oNTnbfwY&__jvst=Employee+Referral&__jvsd=sFP3Shwb&__jvsc=Twitter&bid=nL2flMwE'>LiveVox Careers - Associate Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -446,7 +450,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">San Francisco, California United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zapier.com/jobs/4419814002/senior-data-scientist/'>Senior Data Scientist - Join Zapier. From anywhere. | Zapier</a></h5> 
+<h5><a href='https://zapier.com/jobs/4419814002/senior-data-scientist/'>Senior Data Scientist - Join Zapier. From anywhere. | Zapier</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -498,10 +502,6 @@ accordance with data protection law for the purposes described in our privacy?..
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/averityteam/job/j71cm7f7twxzan856pdhm9ustw'>Senior Data Science Recruiter | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  New York City</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/didi/jobs/1930748'>Job Application for Data Scientist at DiDi Labs</a></h5> 
-<p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
