--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,15 +69,29 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://avawomen.join.com/jobs/468006-data-engineer-80-100'>Job @ Ava (Z?rich): Data Engineer (80-100%) | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oEcibfw3&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nnBcnMwO'>Infoblox Careers - Senior Data Engineer</a></h5> 
+<p><span class="badge badge-light">Burnaby</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://oncase.recruitee.com/o/data-engineer-sao-paulo'>
+      Data Engineer - S?o Paulo - Oncase
+    </a></h5> 
+<p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil  S?o Paulo  S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://avawomen.join.com/jobs/468006-data-engineer-80-100'>Job @ Ava (Z?rich): Data Engineer (80-100%) | JOIN</a></h5> 
+<p><span class="badge badge-light">Z?rich, Switzerland  San Francisco Belgrade</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://snap.hr/sky/job/data-engineer/c6b21d15d8f94e4b9482b7b4762869c6/'>Data Engineer at Sky</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='http://levelset.applytojob.com/apply/ojggr61shU/Senior-Software-Data-Engineer'>Senior Software Data Engineer - Levelset - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1933618'>Job Application for Data Engineer at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1933618'>Job Application for Data Engineer at Coupang</a></h5> 
 <p><span class="badge badge-light">Seattle, WA  Seattle</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -101,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -167,7 +181,7 @@
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://graze.applytojob.com/apply/HZU0PUX3h6/Senior-Data-Engineer'>Senior Data Engineer - graze.com - Career Page</a></h5> 
+<h5><a href='http://graze.applytojob.com/apply/HZU0PUX3h6/Senior-Data-Engineer'>Senior Data Engineer - graze.com - Career Page</a></h5> 
 <p><span class="badge badge-light">Richmond London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -183,7 +197,7 @@
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -235,7 +249,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oU6KafwE&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=nvhxlMwV'>Mindshare Careers - Data Engineer, Marketing Sciences</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oU6KafwE&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=nvhxlMwV'>Mindshare Careers - Data Engineer, Marketing Sciences</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -321,7 +335,7 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 <p><span class="badge badge-light">Gothenburg</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Missouri, St. Louis</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -345,7 +359,7 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 Individuals seeking employment at Hinge are considered without regards to race,
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=orjZafwD&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=noVhkMwb&jvi=orjZafwD,Job&jvk=Job'>Medidata Solutions Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=orjZafwD&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=noVhkMwb&jvi=orjZafwD,Job&jvk=Job'>Medidata Solutions Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -386,7 +400,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Cape Town South Africa</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/navis/jobs/4495789002'>Job Application for Data Engineer at NAVIS</a></h5> 
+<h5><a href='https://boards.greenhouse.io/navis/jobs/4495789002'>Job Application for Data Engineer at NAVIS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -469,18 +483,6 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/vimeo/jobs/1930262'>Job Application for Associate Data Engineer, BI Engineering Team (Python/SQL) at Vimeo</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/escale/94191c35-5ff6-4154-b495-29ebe834ef60'>Escale - Data Engineer</a></h5> 
-<p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4488773002'>Job Application for Informatics Data Engineer at Tempus</a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
 
